# neuron_engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.old  LICENSE  README.md  STYLE.md  compile_commands.json
cfi/neuron/: cfg.hpp.in
example/: CMakeLists.txt
example/src/: main.cpp
libs/neuron/: CMakeLists.txt
libs/occipital/: CMakeLists.txt
libs/stem/: CMakeLists.txt
libs/synapse/: CMakeLists.txt
libs/synapse/src/neuron/synapse/: cocoas.hpp  generic.cpp  generic.hpp  linux.cpp  linux.hpp  macos.cpp  macos.hpp  macos.mm  pre.hpp  wayland.cpp  wayland.hpp  win32.cpp  win32.hpp  x11.cpp  x11.hpp
src/neuron/: neuron.cpp  neuron.hpp  pre.hpp  utils.hpp
src/neuron/platform/: generic.cpp  generic.hpp  linux.cpp  linux.hpp  wayland.cpp  wayland.hpp  win32.cpp  win32.hpp  x11.cpp  x11.hpp
